# TotoCintureAccademia

./: app.py  data.xlsx  main.py  predictions.db  pyproject.toml
