[project]
name = "totocintureaccademia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "polars>=1.30.0",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
    "supabase>=2.15.3",
]
